2009-08-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c, src/highlighting.c, src/dialogs.c, src/filetypes.c,
   src/filetypes.h, src/document.c, src/symbols.c:
   Support adding custom filetype files e.g. filetype.Foo.conf. (Only
   tested with empty file so far).
   Allow GeanyFiletype::extension to be NULL.
 * src/filetypes.c:
   Change custom filetype filename format to filetypes.Foo.conf for
   consistency with built-in filetype files.
   Fix loading custom filetype settings (e.g. default extension).
   Add note about using GeanyFiletype pointer instead of filetype_id
   for function arguments.
 * src/filetypes.c:
   Prevent adding entries for both system and user custom filetype
   files.


2009-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Call get_keyfile_wordchars() in highlighting_init_styles().


2009-08-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.ada:
   Add missing file.
 * src/keybindings.c:
   Switching notebook tabs now works for the currently used notebook
   widget instead of always using the documents notebook.
 * src/document.c, src/document.h, src/documentprivate.h,
   doc/plugins.dox:
   Small corrections to some API docs.


2009-08-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c, src/win32.h, src/win32.c:
   Expand system environment variables (%variableName%) on Windows when
   running Build commands.


2009-07-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Rename 'Reflow lines/paragraph' to 'Reflow lines/block' because in
   future using an indent block is more useful e.g. for ChangeLog
   files.
 * scintilla/LexMarkdown.cxx, scintilla/makefile.win32,
   scintilla/include/SciLexer.h, scintilla/include/Scintilla.iface,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,