@@ -1,3 +1,11 @@
+2009-08-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/highlighting.c, src/main.c:
+   Fix setting wordchars for custom filetypes.
+   Use style_sets array for custom filetypes too.
+   Replace styleset_none() with styleset_default().
+
+
 2009-08-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/templates.c, src/highlighting.c, src/dialogs.c, src/filetypes.c,
